[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microcks-testcontainers"
version = "0.1.0"
description = "Python library for Testcontainers that enables embedding Microcks into your unit tests with lightweight, throwaway instances thanks to containers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Destiny Erhabor", email = "destinyerhabor6@gmail.com" },
]
keywords = ["microcks", "testcontainers", "testing", "mocking", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "testcontainers>=4.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://microcks.io"
Repository = "https://github.com/microcks/microcks-testcontainers-python"
Issues = "https://github.com/microcks/microcks-testcontainers-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/microcks_testcontainers"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
markers = ["integration: tests requiring Docker"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
